--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@iconify-json/carbon": "^1.1.18",
+    "@loadable/component": "^5.15.3",
     "@playwright/test": "1.26.1",
+    "@types/hast": "^2.3.4",
+    "@types/mdast": "^3.0.11",
     "@types/node": "^20.2.3",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
@@ -37,23 +41,44 @@
     "husky": "^8.0.3",
     "node": "link:@/types/node",
     "ora": "^6.3.1",
+    "remark-mdx": "^2.3.0",
+    "remark-stringify": "^10.0.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
+    "unist-util-visit": "^4.1.2",
     "vitest": "^0.32.0"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
+    "@mdx-js/rollup": "2.1.3",
+    "@vitejs/plugin-react": "^2.2.0",
+    "acorn": "^8.9.0",
     "cac": "^6.7.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
+    "github-slugger": "^2.0.0",
+    "hast-util-from-html": "^1.0.2",
+    "mdast-util-mdxjs-esm": "^1.3.1",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx-frontmatter": "^3.0.0",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
     "rollup": "^3.25.1",
     "root": "^3.2.0",
-    "vite": "^4.3.8"
+    "sass": "^1.63.6",
+    "shiki": "^0.14.2",
+    "sirv": "^2.0.3",
+    "unified": "^10.1.2",
+    "unocss": "^0.53.4",
+    "vite": "3.1.4"
   }
 }
