--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "commonjs" /* Specify what module code is generated. */,
     "rootDir": "." /* Specify the root folder within your source files. */,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@runtime": ["./runtime/index.ts"],
+      "shared/*": ["shared/*"]
+    },
   }
 }
